# home-cli

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
.github/workflows/: release-binaries.yml  update-homebrew-tap.yml
cli/: README.md  config.example.toml  go.mod  main.go
cli/apple-home-cli/: README.md  go.mod  go.sum
cli/apple-home-cli/cmd/apple-home/: main.go
cli/apple-home-cli/pkg/applehome/: home.go  leviton.go  shortcuts.go
cli/gree/: README.md
cli/gree-cli/: README.md  go.mod  main.go  main_test.go
cli/gree-cli/skill/: SKILL.md
cli/gree/gree/: config.py  service.py
cli/oura-ring-cli/: README.md  config.example.toml  go.mod  main.go  main_test.go
gree/: __init__.py  cli.py  config.example.toml
harness/: .env.example  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
harness/apps/admin-cli/: package.json
harness/apps/admin-cli/src/: env.ts  index.ts
harness/apps/imessage-bridge/: package.json
harness/apps/imessage-bridge/src/: bridge-runtime.ts  handler.test.ts  handler.ts  (+4 more)
harness/apps/mac-runner/: package.json
harness/apps/twilio-function/: package.json
harness/docs/: SETUP.md
harness/ops/: com.imessage-pi-agent.bridge.plist  com.imessage-pi-agent.runner.plist  com.twilio-pi-agent.runner.plist  pi-workspace-AGENTS.md
harness/scripts/: run-imessage-bridge.sh  smoke.sh  start-imessage-bridge-terminal.sh
harness/twilio-serverless/: .env.example  README.md  package.json
harness/twilio-serverless/functions/: inbound-sms.protected.js
skill/: SKILL.md
tests/: test_cli.py  test_service.py
(+7 files in other folders)
